xx yyy jjjj: 0.3.5 Miek <miek@miek.nl>
  -- minor features added --
   * Added '-E file' option, with which you can give rdup an exlude
     list. This list contain extended POSIX regular expressions. See
     rdup(8) for more info.
   * Add -E to rdup-dump and rdup-snapshot 
   * Added rpm from: http://www.sisyphus.ru/srpm/rdup/spec


15 Dec 2006: 0.3.4 Miek <miek@miek.nl>
  -- bug fix release --
   * Output a prefix zero when printing permissions like: ---rwxrwx
   * When doing a remote backup and not running as root, rdup-snap
     needs to set the permissions of dirs in such a way that it
     can still access the directory (ie: chmod +wx $dir).
     Thanks to Robert Haskins
   * Add a rpm spec file; feedback welcomed
   * Install the manual page of rdup-snap-link
   * Remove the screenshot.jpg; makes tar.bz2 200K smaller


04 Dec 2006: 0.3.3 Miek <miek@miek.nl>
   -- bug fix release --
   * Really fix the backup creation when using rdup-snap-link


02 Dec 2006: 0.3.2 Miek <miek@miek.nl>
   -- bug fix --
   * Use rmdir and NOT unlink to remove directories
   * Never remove in rdup-cp
   * Fix a bug for dir creation when using rdup-snapshot
     (this triggered on an incr. dump, during a month change)


26 Nov 2006: 0.3.1 Miek <miek@miek.nl>
   -- minor fixes --
   * print the bytes transfered with 1 decimal.
   * compilation fix when you don't have xattr (on Linux)
   * documentation updates; rdup-backups(8) [still needs work]
   * added: rdup-cp (and manpage) to copy from a rdup created backup


29 Oct 2006: 0.3.0 Miek <miek@miek.nl>
   -- minor fixes --
   * add manual page for rdup-snap-link
   * Some autotool fixes
   * documentation updates
   * rdup-snap-here fixes


25 Oct 2006: 0.3.0-rc1 Miek <miek@miek.nl>
   -- major features enhancements --
  ** OUTPUT CHANGES **
   * new format character: %b: permission bits
   * new format character: %H: print the sha1 hash of the file
   * output changed to: %p%T %b %u %g %l %s %n\n"