@@ -1,10 +1,13 @@
 xx yyy jjjj: 0.3.5 Miek <miek@miek.nl>
   -- minor features added --
    * Added '-E file' option, with which you can give rdup an exlude
-     list. This list contain extended POSIX regular expressions. See
+     list. This list contains extended POSIX regular expressions. See
      rdup(8) for more info.
    * Add -E to rdup-dump and rdup-snapshot 
    * Added rpm from: http://www.sisyphus.ru/srpm/rdup/spec
+   * Fix occurences of $sbindir@ to @sbindir@ in rdup-restore.in
+     (patch from Fabio Rossi)
+	
 
 
 15 Dec 2006: 0.3.4 Miek <miek@miek.nl>
